test_suite/ill_formed/invalid_assign.mnl
fun main: [] => {
    def a = 42
    420 = a

    return 0
}